changed the html structure so the text and the radio buttons work together

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,10 +39,15 @@ body {
 
 input[type=radio]{
 	display: inline-block;
+	/*visibility: hidden;*/
 }
 
 input[type=radio]:hover {
-	color: #fff;
+	cursor: pointer;
+}
+
+span.question-text:hover {
+	color: #666;
 }
 
 .testQuestions {
