--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,17 +37,33 @@ body {
 	width: 75;
 }
 
-input[type=radio]{
-	display: inline-block;
+input[type=radio] {
 	/*visibility: hidden;*/
 }
 
-input[type=radio]:hover {
+input[type=radio]:hover, label.question-text {
 	cursor: pointer;
 }
 
-span.question-text:hover {
+input[type=radio]:hover, label.question-text:hover {
 	color: #666;
+}
+
+input[type=radio]:checked, label.question-text:checked {
+	font-weight: 800;
+}
+
+label.question-text {
+	display: inline-block;
+	cursor: pointer;
+	position: relative;
+	padding-left: 25px;
+	margin-right: 15px;
+	font-size: 13px;
+}
+:checked {
+	font-weight: 800;
+	border: 1px #000;
 }
 
 .testQuestions {
