--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,11 @@ label.question-text {
 	font-size: 20px;
 }
 
+label.question-text input[type=radio]:checked {
+	background-color: yellow;
+	font-weight: bold;
+}
+
 .testQuestions {
 	display: inline;
 	font-size: 15px;
